2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Autom4te/FileUtils.pm (handle_exec_errors): New argument
	$hint, show if the executing program does not exist.
	(xsystem_hint): New function, like xsystem but allows to pass
	a hint.

2008-03-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Implement the `notrans_' prefix for untransformed manpages.
	* automake.in (handle_man_pages), lib/am/mans.am: Implement
	notrans_ prefix for MANS primary and rework dependencies for
	install-man%SECTION%; use only vars defined in Makefile.am.
	* doc/automake.texi (Renaming, Uniform, Man pages):
	Document notrans_ prefix.
	* NEWS: Update.
	* tests/notrans.test: New test.
	* tests/Makefile.am: Update.

	* automake.in (handle_man_pages): Reindent, for next patch.

2008-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Use `install' with multiple files at once for some primaries.
	With nobase targets, at most 50 files are installed at once,
	to avoid quadratic string concatenation and line length limits.
	This isn't yet done with base targets.  One hope is that there,
	the typical file name length is lower.  If this turns out to be
	a problem, it should be revisited.

	* lib/am/inst-vars.am (am__nobase_list): New helper macro for
	installation of multiple nobase files at once: sorts and lists
	files keyed by their target directory.
	* lib/am/data.am (%DIR%%PRIMARY%_INSTALL): No need to set it to
	$(install_sh_DATA) any more, not even for nobase targets.
	(install-%DIR%%PRIMARY%): Split base and nobase cases.
	Rewrite to pass lists of files which all go in the same
	directory to `install'.  In the nobase case, make use of
	$(am__nobase_list) and $(MKDIR_P) each directory before
	populating it.  Take care of files in source and build trees,
	and avoid creating directories where no files are to be
	installed.
	* lib/am/libs.am (%DIR%LIBRARIES_INSTALL): Likewise.
	(install-%DIR%LIBRARIES): Likewise.
	* lib/am/python.am (%DIR%PYTHON_INSTALL): Likewise.