@@ -1,5 +1,8 @@
 2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* Makefile.am (WGET_SV_GIT_CF): New.
+	(fetch): Pull config.guess and config.sub from git repo now.
+
 	* lib/Autom4te/FileUtils.pm (handle_exec_errors): New argument
 	$hint, show if the executing program does not exist.
 	(xsystem_hint): New function, like xsystem but allows to pass
